# kdock

./: .dir-locals.el  .gitignore  .gitmodules  Doxyfile  Makefile.am  NOTES.md  README.md  compile_flags.txt  configure.ac
docs/: .gitignore
images/: Taskbar.penpot
libs/: .gitignore
libs/mkshift/: .gitignore  Makefile.am
libs/mkshift/mkshift/: dummy.cpp
libs/yogapp/: .gitignore  Makefile.am  configure.ac
libs/yogapp/yogapp/: yogapp.cpp  yogapp.hpp
src/: collision.cpp  collision.hpp  layout.cpp  layout.hpp  main.cpp
